--- a/aboutus.html
+++ b/aboutus.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a href="./index.html" class="nav-link"><span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item active"><a href="#" class="nav-link"><span class="fa fa-info fa-lg"></span> About</a></li>
                     <li class="nav-item"><a href="#" class="nav-link"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                    <li class="nav-item"><a href="./contactus.html" class="nav-link"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -50,7 +50,7 @@
         <div class="row">
             <ol class="col-12 breadcrum">
                 <li class="breadcrum-item"><a href="./index.html">Home</a></li>
-                <li class="breadcrum-item active">About Us</li>
+                <li class="breadcrum-item active">/About Us</li>
             </ol>
             <div class="col-12">
                <h3>About Us</h3>
@@ -94,7 +94,7 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
